// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BotaoScrollTop.styles BotaoStyled DEVE ser igual ao snapshot 1`] = `
.c0 {
  border: none;
  display: none;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 24px;
  background: transparent;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.7;
}

.c0:active {
  opacity: 1;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`BotaoScrollTop.styles BotaoStyled DEVE ser igual ao snapshot QUANDO $exibir for verdadeiro 1`] = `
.c0 {
  border: none;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 24px;
  background: transparent;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.7;
}

.c0:active {
  opacity: 1;
}

<div>
  <button
    class="c0"
  />
</div>
`;

exports[`BotaoScrollTop.styles IconeScrollTop DEVE ser igual ao snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <svg
        class=""
        data-file-name="SvgISeta"
        fill="#999E9C"
        height="48"
        style="min-width: 48px; min-height: 48px; max-width: 48px; max-height: 48px; transform: rotate(-90deg);"
        width="48"
      />
    </div>
  </body>,
  "container": <div>
    <svg
      class=""
      data-file-name="SvgISeta"
      fill="#999E9C"
      height="48"
      style="min-width: 48px; min-height: 48px; max-width: 48px; max-height: 48px; transform: rotate(-90deg);"
      width="48"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BotaoScrollTop.styles TextoScrollTop DEVE ser igual ao snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  font-weight: 400;
  font-size: 24px;
  line-height: 30px;
  font-family: AvertaStd-Semibold;
  color: #999E9C;
  text-align: start;
  cursor: pointer;
  text-transform: none;
}

<body>
    <div>
      <span
        alturalinha="30"
        class="c0 "
        cor="#999E9C"
        cursor="pointer"
        estilo="semibold"
        tamanho="24"
      />
    </div>
  </body>,
  "container": .c0 {
  font-weight: 400;
  font-size: 24px;
  line-height: 30px;
  font-family: AvertaStd-Semibold;
  color: #999E9C;
  text-align: start;
  cursor: pointer;
  text-transform: none;
}

<div>
    <span
      alturalinha="30"
      class="c0 "
      cor="#999E9C"
      cursor="pointer"
      estilo="semibold"
      tamanho="24"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
